--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <groupId>com.edmunds</groupId>
     <artifactId>databricks-maven-plugin</artifactId>
     <version>1.0.1-SNAPSHOT</version>
+    <packaging>maven-plugin</packaging>
+
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A databricks maven plugin to automate databricks deployments as part of a build
