--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.edmunds</groupId>
     <artifactId>databricks-maven-plugin</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.2.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
 
@@ -83,8 +83,9 @@
         <commons-lang-version>3.4</commons-lang-version>
         <commons-collections-version>3.2.1</commons-collections-version>
 
-        <maven-plugin-info-version>2.7</maven-plugin-info-version>
-        <maven-plugin-plugin-version>3.4</maven-plugin-plugin-version>
+        <maven-javadoc-plugin-version>2.10.2</maven-javadoc-plugin-version>
+        <maven-plugin-info-version>3.0.0</maven-plugin-info-version>
+        <maven-plugin-plugin-version>3.5.2</maven-plugin-plugin-version>
         <maven-version>3.2.1</maven-version>
         <maven-plugin-annotation-version>3.2</maven-plugin-annotation-version>
         <plexus-version>3.0.24</plexus-version>
@@ -110,13 +111,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>${maven-plugin-info-version}</version>
-                <reportSets>
-                    <reportSet>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </reportSet>
-                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.1</version>
             </plugin>
         </plugins>
     </reporting>
@@ -150,7 +149,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>${maven-javadoc-plugin-version}</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
