ISSUE 2 - fix integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
   ~      limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.edmunds</groupId>
@@ -272,7 +273,7 @@
                             <!--noLog will send to console, instead of file-->
                             <noLog>true</noLog>
                             <goals>
-                                <goal>deploy</goal>
+                                <goal>install</goal>
                             </goals>
                         </configuration>
                         <executions>
@@ -290,6 +291,11 @@
                                 <groupId>com.edmunds.databricks</groupId>
                                 <artifactId>databricks-rest-client</artifactId>
                                 <version>${databricks-rest-client-version}</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.commons</groupId>
+                                <artifactId>commons-lang3</artifactId>
+                                <version>${commons-lang-version}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
