--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>${maven-plugin-info-version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.1</version>
+            </plugin>
         </plugins>
     </reporting>
 
