[maven-release-plugin] prepare release databricks-maven-plugin-1.2.1

--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,12 @@
   ~      limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.edmunds</groupId>
     <artifactId>databricks-maven-plugin</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <packaging>maven-plugin</packaging>
 
 
@@ -70,7 +69,7 @@
         <connection>scm:git:git@github.com:edmunds/databricks-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:edmunds/databricks-maven-plugin.git</developerConnection>
         <url>https://github.com/edmunds/databricks-maven-plugin</url>
-        <tag>HEAD</tag>
+        <tag>databricks-maven-plugin-1.2.1</tag>
     </scm>
 
     <properties>
