Big change here is to allow for testing of our Mojos that are filled out by default values - PrepareLibraryResources now checks to make sure that the bucketName property is filled out.
Refactoring validation
Adding a stub for library testing

Fixing the library paths with s3

it was missing the license

removing databricks.repo

Switching all the way back to databricks.repo from bucketName
Updating which rest-client we use
Combining the properties used in upload, library and upsert jobs
Expanded tests

Fixing IT again
Adding comments
Making some of the dependencies test dependencies

Moved validate repo properties and createArtifactPath to base mojo
Fixed issue with upload (split into bucket and key)
Added an upload-to-s3 job

triggering a new build

seeing if this fixes tests

removing some things to see if travis build works

trying to put down guice version

trying to remove guava to test

some more tests

testing-trial-branch

turning back on validation util test

removing more tests that clobber system properties

Bringing back some of the tests

--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -29,8 +29,6 @@
         <pmd.skip>true</pmd.skip>
         <cpd.skip>true</cpd.skip>
         <skipTests>true</skipTests>
-        <bucketName>${env.DB_REPO}</bucketName>
-        <databricks.repo>${env.DB_REPO}</databricks.repo>
         <instance.profile.arn>${env.INSTANCE_PROFILE_ARN}</instance.profile.arn>
         <environment>QA</environment>
     </properties>
@@ -62,6 +60,9 @@
                 <groupId>@project.groupId@</groupId>
                 <artifactId>@project.artifactId@</artifactId>
                 <version>@project.version@</version>
+                <configuration>
+                    <databricksRepo>${env.DB_REPO}</databricksRepo>
+                </configuration>
                 <executions>
                     <execution>
                         <id>prepackage</id>
