--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.edmunds</groupId>
     <artifactId>databricks-maven-plugin</artifactId>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.3.1-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
 
@@ -78,20 +78,14 @@
 
         <freemarker-version>2.3.22</freemarker-version>
         <aws-java-sdk-s3-version>1.11.347</aws-java-sdk-s3-version>
-        <httpcomponents-version>4.4.1</httpcomponents-version>
-        <commons-codec-version>1.11</commons-codec-version>
         <commons-lang-version>3.4</commons-lang-version>
         <commons-collections-version>3.2.1</commons-collections-version>
 
-        <maven-javadoc-plugin-version>2.10.2</maven-javadoc-plugin-version>
-        <maven-plugin-info-version>3.0.0</maven-plugin-info-version>
-        <maven-site-plugin-version>3.7</maven-site-plugin-version>
-        <maven-plugin-plugin-version>3.5.2</maven-plugin-plugin-version>
-        <maven-version>3.2.1</maven-version>
-        <maven-plugin-annotation-version>3.2</maven-plugin-annotation-version>
+        <maven-version>3.2.5</maven-version>
+        <maven-plugin-annotation-version>3.3</maven-plugin-annotation-version>
         <plexus-version>3.0.24</plexus-version>
 
-        <databricks-rest-client-version>[2.0.0, 2.1.0)</databricks-rest-client-version>
+        <databricks-rest-client-version>[2.2.0, 2.3.0)</databricks-rest-client-version>
 
         <!--Test versions-->
         <hamcrest-version>1.3</hamcrest-version>
@@ -101,17 +95,18 @@
         <groovy-version>2.4.15</groovy-version>
     </properties>
 
+
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>${maven-plugin-plugin-version}</version>
+                <version>3.5.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven-plugin-info-version}</version>
+                <version>3.0.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -150,7 +145,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin-version}</version>
+                <version>2.10.2</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -179,6 +174,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
+                    <!--<parallel>none</parallel>-->
+                    <!--<forkCount>1</forkCount>-->
+                    <!--<reuseForks>false</reuseForks>-->
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
@@ -189,18 +187,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>${maven-site-plugin-version}</version>
+                <version>3.7</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>${maven-plugin-info-version}</version>
+                <version>3.0.0</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>${maven-plugin-plugin-version}</version>
+                <version>3.5.2</version>
                 <configuration>
                     <goalPrefix>databricks</goalPrefix>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
@@ -323,7 +321,7 @@
                         </executions>
                         <dependencies>
                             <dependency>
-                                <groupId>com.edmunds.databricks</groupId>
+                                <groupId>com.edmunds</groupId>
                                 <artifactId>databricks-rest-client</artifactId>
                                 <version>${databricks-rest-client-version}</version>
                             </dependency>
@@ -341,7 +339,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.edmunds.databricks</groupId>
+            <groupId>com.edmunds</groupId>
             <artifactId>databricks-rest-client</artifactId>
             <version>${databricks-rest-client-version}</version>
         </dependency>
@@ -391,6 +389,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- TEST DEPENDENCIES-->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
@@ -431,6 +430,48 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.sisu</groupId>
+            <artifactId>org.eclipse.sisu.plexus</artifactId>
+            <version>0.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-guice</artifactId>
+            <version>3.2.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugin-testing</groupId>
+            <artifactId>maven-plugin-testing-harness</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-aether-provider</artifactId>
+            <version>${maven-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>${maven-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>${maven-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
