--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,9 @@
         <maven-javadoc-plugin-version>2.10.2</maven-javadoc-plugin-version>
         <maven-plugin-info-version>3.0.0</maven-plugin-info-version>
         <maven-site-plugin-version>3.7</maven-site-plugin-version>
-        <maven-plugin-plugin-version>3.5.2</maven-plugin-plugin-version>
-        <maven-version>3.2.1</maven-version>
-        <maven-plugin-annotation-version>3.2</maven-plugin-annotation-version>
+        <maven-plugin-plugin-version>3.3</maven-plugin-plugin-version>
+        <maven-version>3.2.5</maven-version>
+        <maven-plugin-annotation-version>3.3</maven-plugin-annotation-version>
         <plexus-version>3.0.24</plexus-version>
 
         <databricks-rest-client-version>[2.0.0, 2.1.0)</databricks-rest-client-version>
@@ -431,6 +431,46 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.sisu</groupId>
+            <artifactId>org.eclipse.sisu.plexus</artifactId>
+            <version>0.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugin-testing</groupId>
+            <artifactId>maven-plugin-testing-harness</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-aether-provider</artifactId>
+            <version>${maven-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>${maven-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>${maven-version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
