Switching all the way back to databricks.repo from bucketName Updating which rest-client we use Combining the properties used in upload, library and upsert jobs Expanded tests

--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -29,7 +29,7 @@
         <pmd.skip>true</pmd.skip>
         <cpd.skip>true</cpd.skip>
         <skipTests>true</skipTests>
-        <bucketName>${env.DB_REPO}</bucketName>
+        <databricks.repo>${env.DB_REPO}</databricks.repo>
         <instance.profile.arn>${env.INSTANCE_PROFILE_ARN}</instance.profile.arn>
         <environment>QA</environment>
     </properties>
