--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,8 @@
         <maven-plugin-annotation-version>3.3</maven-plugin-annotation-version>
         <plexus-version>3.0.24</plexus-version>
 
-        <databricks-rest-client-version>[2.0.0, 2.1.0)</databricks-rest-client-version>
+        <!-- DOESN'T WORK WITH NEWEST VERSION-->
+        <databricks-rest-client-version>[2.2.0, 2.3.0)</databricks-rest-client-version>
 
         <!--Test versions-->
         <hamcrest-version>1.3</hamcrest-version>
@@ -323,7 +324,7 @@
                         </executions>
                         <dependencies>
                             <dependency>
-                                <groupId>com.edmunds.databricks</groupId>
+                                <groupId>com.edmunds</groupId>
                                 <artifactId>databricks-rest-client</artifactId>
                                 <version>${databricks-rest-client-version}</version>
                             </dependency>
@@ -341,7 +342,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.edmunds.databricks</groupId>
+            <groupId>com.edmunds</groupId>
             <artifactId>databricks-rest-client</artifactId>
             <version>${databricks-rest-client-version}</version>
         </dependency>
