--- a/src/it/simple-it/pom.xml
+++ b/src/it/simple-it/pom.xml
@@ -29,7 +29,6 @@
         <pmd.skip>true</pmd.skip>
         <cpd.skip>true</cpd.skip>
         <skipTests>true</skipTests>
-        <databricks.repo>${env.DB_REPO}</databricks.repo>
         <instance.profile.arn>${env.INSTANCE_PROFILE_ARN}</instance.profile.arn>
         <environment>QA</environment>
     </properties>
@@ -61,6 +60,9 @@
                 <groupId>@project.groupId@</groupId>
                 <artifactId>@project.artifactId@</artifactId>
                 <version>@project.version@</version>
+                <configuration>
+                    <databricksRepo>${env.DB_REPO}</databricksRepo>
+                </configuration>
                 <executions>
                     <execution>
                         <id>prepackage</id>
