--- a/pom.xml
+++ b/pom.xml
@@ -168,18 +168,11 @@
                 </configuration>
             </plugin>
 
-            <!--TODO getting odd errors with testng report...-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <!--<parallel>none</parallel>-->
-                    <!--<forkCount>1</forkCount>-->
-                    <!--<reuseForks>false</reuseForks>-->
-                    <!--<suiteXmlFiles>-->
-                        <!--<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>-->
-                    <!--</suiteXmlFiles>-->
                 </configuration>
             </plugin>
 
@@ -396,12 +389,7 @@
             <version>${hamcrest-version}</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.testng</groupId>-->
-            <!--<artifactId>testng</artifactId>-->
-            <!--<version>${testng-version}</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
@@ -414,12 +402,7 @@
             <version>${powermock-version}</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.powermock</groupId>-->
-            <!--<artifactId>powermock-module-testng</artifactId>-->
-            <!--<version>${powermock-version}</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito</artifactId>
@@ -433,13 +416,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.google.inject</groupId>-->
-            <!--<artifactId>guice</artifactId>-->
-            <!--<version>3.0</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
+        <!-- Must use junit3 due to mvn-test dependency-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
