--- a/pom.xml
+++ b/pom.xml
@@ -174,9 +174,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
                 <configuration>
-                    <!--<parallel>none</parallel>-->
-                    <!--<forkCount>1</forkCount>-->
-                    <!--<reuseForks>false</reuseForks>-->
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
@@ -389,6 +386,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Needed for guava functionality AND maven-test-harness. Can't be scope test-->
+        <dependency>
+            <groupId>org.sonatype.sisu</groupId>
+            <artifactId>sisu-guice</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+
         <!-- TEST DEPENDENCIES-->
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -437,13 +441,6 @@
             <groupId>org.eclipse.sisu</groupId>
             <artifactId>org.eclipse.sisu.plexus</artifactId>
             <version>0.3.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.sonatype.sisu</groupId>
-            <artifactId>sisu-guice</artifactId>
-            <version>3.2.3</version>
             <scope>test</scope>
         </dependency>
 
