--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>com.edmunds</groupId>
     <artifactId>databricks-maven-plugin</artifactId>
-    <version>1.11.2</version>
+    <version>1.11.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
 
